--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "exams"]
 	path = exams
 	url = https://github.com/anchoringpoint/RustTest
+[submodule "rustlings"]
+	path = rustlings
+	url =  https://github.com/anchoringpoint/RustTest2
