--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = rustlings
 	url =  https://github.com/anchoringpoint/RustTest2
 	branch = main
+[submodule "learning-lm-rs"]
+	path = learning-lm-rs
+	url = https://github.com/anchoringpoint/t-learning-lm-rs.git
